fixed alignment on feature buttons

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 
 .main {
   display: inline-block;
-  margin-right: 50%
+  vertical-align: middle;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -14,9 +14,10 @@ body {
 /* Next & previous buttons */
 .right, .left {
   display: inline-block;
+  vertical-align: middle;
+  margin: 10px;
   cursor: pointer;
-  width: auto;
-  padding: 5px;
+  padding: 15px;
   background-color: rgb(247, 247, 247);
   color: gray;
   font-size: 18px;
@@ -25,14 +26,14 @@ body {
 /* .right{
   float: right;
   margin-right: 10%;
-  margin-top: -20%;
+  margin-top: -20%; 
 }
 
 .left{
   float: left;
   margin-left: 10%;
   margin-top: -20%; 
-}  */
+} */
 
 /* On hover, add a black background color with a little bit see-through */
 .left:hover, .right:hover {
@@ -46,7 +47,7 @@ input[type=post], select {
   margin-right: auto;
   margin-top: 50px;
   width: 35%;
-  padding: 12px 20px;
+  padding: 15px 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
